5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_1804.log
== TEST (2019-04-01 09:20:52) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-y b)**2)
print(round(distancia,3))
-- ERROR:
File "XXXX", line 6
    distancia=sqrt((xa-xb)**2+(ya-y b)**2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:20:52) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-y b)**2)
print(round(distancia,3))
-- ERROR:
File "XXXX", line 6
    distancia=sqrt((xa-xb)**2+(ya-y b)**2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:24:54) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-y b)**2)
print(round(distancia,3))
-- ERROR:
File "XXXX", line 6
    distancia=sqrt((xa-xb)**2+(ya-y b)**2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:25:12) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-y b)**2)
print(round(distancia,3))
-- ERROR:
File "XXXX", line 6
    distancia=sqrt((xa-xb)**2+(ya-y b)**2)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:26:01) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-yb)**2)
print(round(distancia,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:26:12) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-yb)**2)
print(round(distancia,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:26:49) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-yb)**2)
print(round(distancia,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:27:08) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-yb)**2)
print(round(distancia,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:27:30) 
-- CODE:
xa=float(input("xa"))
ya=float(input("ya"))
xb=float(input("xb"))
yb=float(input("yb"))
from math import*
distancia=sqrt((xa-xb)**2+(ya-yb)**2)
print(round(distancia,3))
-- EXECUTION TIME:
0.296699
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
